--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "antd": "^3.5.3",
+    "bootstrap": "^4.5.3",
     "moment": "^2.22.1",
     "react": "^16.3.2",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.3.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "1.1.4"
   },
   "scripts": {
